# ai-tutor

./: .dockerignore  .gitignore  Dockerfile  README.md  adaptive_tutor.db  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: api.py  domain.py
app/services/: auth.py  bootstrap.py  content_library.py  course_workspace.py  curriculum.py  database.py  dependencies.py  evaluation.py  learner_model.py  lesson_content.py  lesson_planner.py  llm.py  materials.py  memory.py  objectives.py  orchestrator.py  orm.py  progress.py  repositories.py  review.py  study_intent.py  teaching.py  tutor_config.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/__tests__/: api.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: admin-console.tsx  learner-home.tsx
frontend/lib/: api.ts  types.ts
migrations/: env.py
migrations/versions/: 20260407_000001_create_initial_tables.py  20260407_000002_normalize_learning_state.py  20260407_000003_add_reviews_and_curriculum_graph.py  20260407_000004_add_concept_objectives.py  20260407_000005_add_turn_objective_id.py  20260407_000006_add_auth_tables.py  20260407_000007_add_turn_generation_traces.py  20260407_000008_add_lesson_plans.py  (+3 more)
tests/: test_adaptive_tutor.db  test_api.py  test_content_library.py  test_curriculum.py  test_lesson_plan.py  test_llm_evaluation.py  test_llm_teaching.py  test_memory.py  test_misconceptions.py  test_orchestrator_resilience.py  test_placement.py  test_review.py
(+1 files in other folders)
